# marketplace-bot

./: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml
src/marketplace/: config.py  main.py  tasks.py
src/marketplace/callbacks/: cart.py  catalog.py  do_nothing.py
src/marketplace/database/alembic/migrations/: env.py
src/marketplace/database/alembic/migrations/versions/: 46e050ad636c_.py
src/marketplace/database/sqlalchemy/: mappers.py  models.py
src/marketplace/entities/: cart_item.py  category.py  faq.py  product.py  subcategory.py
src/marketplace/filters/: number.py  personal_data.py
src/marketplace/handlers/: cart.py  catalog.py  faq.py
src/marketplace/keyboards/: cart.py  catalog.py
src/marketplace/services/: acquire_product.py  add_product_to_cart.py  get_cart_item.py  get_categories.py  get_product.py  get_product_with_id.py  get_subcategories.py
src/marketplace/states/: cart.py  catalog.py
