[project]
name = "marketplace-bot"
version = "0.1.0"
requires-python = "==3.10.*"

dependencies = [
    "aiogram==3.4.*",
    "sqlalchemy==2.0.*",
    "psycopg2-binary==2.9.*",
    "asyncpg==0.29.*",
    "alembic==1.13.*",
    "dishka==1.0.*",
    "arq==0.25.*",
    "openpyxl==3.1.*",
]

[project.scripts]
bot = "marketplace.main:main"
